# lex-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.aws.yaml  config.docker.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
deploy/: task-definition.json
docs/: ai_engineer_competitiveness_plan_2026.md  baseline.md  bug_fixes.md
legal_rag_v1/: __init__.py  _shared.py  agent.py  chunking.py  cli.py  config.py  contextualizer.py  cuad.py  embeddings.py  evals.py  generator.py  pipeline.py  reranker.py  store.py
lex_rag/: __init__.py  _shared.py  agent.py  chunking.py  cli.py  contextualizer.py  cuad.py  embeddings.py  evals.py  generator.py  pipeline.py  reranker.py  ssh_tunnel.py  store.py  tracing.py
scripts/: eval.py  eval_experiment.py  eval_generation.py  eval_ocr.py  grid_search.py  ingest.py  ingest_ocr.py  review_ocr.py  serve.py  start_ocr_service.py  start_tunnel.py  test_pipeline.py  test_ssh_connection.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_generator.py  test_reranker.py  test_serve_root_path.py  test_store.py
